# yowchurch

./: .gitignore  Ex1_ChurchBool.hs  Ex2a_PeanoNat.hs  Ex2b_ChurchNat.hs  Ex3_ChurchList.hs  Ex4_ChurchFree.hs  Main.hs  NaiveFree.hs  README.md  Tests.hs  church.cabal  stack.yaml
Test/: Ex1Tests.hs  Ex2aTests.hs  Ex2bTests.hs  Ex3Tests.hs  Ex4Tests.hs
